# sim-vk-rend

./: CMakeLists.txt  README.md  build.sh  build_ubuntu.md  toolchain.cmake
cmake/: BOOST.cmake  CHECK_INSOURCE_BUILD.cmake  CUDA.cmake
src/: CMakeLists.txt
src/assets/: common.glsl  cullFustrum.comp  indirectDraw.frag  indirectDraw.vert  indirectDrawCommon.glsl  rayClosestHit.rchit  rayGeneration.rgen  rayMiss.rmiss  triangle.frag  triangle.vert
src/cudaEngine/: CMakeLists.txt  cuDevice.cu  cuDevice.h  cuPredefines.h
src/p2p/: main.cpp  session.cpp  session.h  webrtc.md
src/vk1/: CMakeLists.txt  application.cpp  application.h  main.cpp  window.h
src/vkEngine/: CMakeLists.txt  DirStackFileIncluder.h  arcballCamera.h  camera.h  cameraBase.h  context.cpp  context.h  cullFustrum.h  fp.h  glb.cpp  mathUtils.h  matrix.h  misc.cpp  misc.h  orbitCamera.h  physicalDevice.cpp  physicalDevice.h  quaternion.h  queuethreadsafe.h  rayTracing.h  renderPassBase.h  scene.cpp  scene.h  vector.h  window.h
src/vkJulia/: CMakeLists.txt  application.cpp  application.h  julia.h  main.cpp
